<resources>
    <string name="app_name">Remote Compiler</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="button_send_to_server">Send to server</string>
    <string name="initial_text">Initial text</string>
    <string name="server_send">Send to server</string>
    <string name="openA2">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="act2info">Activity 2!</string>
    <string name="path">Path not selected</string>
    <string name="chooseDir">Choose files to compile</string>
    <string name="chooseMain">Choose main file</string>
    <string name="comp_succ">Compilation successful!</string>
    <string name="line">Where</string>
    <string name="errorMsg">Error message</string>
    <string name="errors">Errors</string>
    <string name="warnings">Warnings</string>
    <string name="warningMsg">Warning message</string>
    <string name="comp_success">Compilation successful!</string>
    <string name="recompile">Retry</string>
    <string name="choose_flags">Choose flags</string>
    <string name="choose_main">Choose main</string>
    <string name="path_intent">path</string>
    <string name="flags_intent">flags</string>
    <string name="main">main</string>
    <string name="file_paths_intent">allFilePaths</string>
    <string name="no_main">Main not selected</string>
</resources>
